# ava-langgraph

./: .coaia  .gitignore  LAUNCH__2511201902.sh  LAUNCH__session_id__AvaLangGraphHolisticNCP_2511180818.sh  LAUNCH__session_id__OBserveFeaturesAndCreateTraces_2511201855.sh  _env.sh  create_trace_example.py  requirements.txt
364e1265-ec0c-440f-85ed-a1ab388c50f3/: 1_mia_ncp_loader_node.md  README.md  (+8 more)
libs/narrative-intelligence/: QA_REPORT.md  README.md  pyproject.toml  test_comprehensive_qa.py
libs/narrative-intelligence/examples/: README.md  sample_narrative.json  usage_example.py
libs/narrative-intelligence/narrative_intelligence/: __init__.py
libs/narrative-intelligence/narrative_intelligence/graphs/: __init__.py  character_arc.py  thematic_analyzer.py
libs/narrative-intelligence/narrative_intelligence/nodes/: __init__.py  emotional_classifier.py  narrative_traversal.py  ncp_loader.py
libs/narrative-intelligence/narrative_intelligence/schemas/: __init__.py  ncp.py  state.py
libs/narrative-intelligence/use_cases/: README.md
libs/narrative-intelligence/use_cases/character_arc/: coming_of_age.json  use_case_multiple_character_types.py
libs/narrative-intelligence/use_cases/emotional_classifier/: thriller_screenplay.json  use_case_batch_processing.py
libs/narrative-intelligence/use_cases/loader/: tech_thriller.json  use_case_multi_source_loading.py
libs/narrative-intelligence/use_cases/thematic_analyzer/: sci_fi_ethics.json  use_case_deep_theme_analysis.py
libs/narrative-intelligence/use_cases/traversal/: fantasy_epic.json  use_case_complex_queries.py
(+1 files in other folders)
